--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "fastify": "^5.2.1",
     "nodemon": "^3.1.9",
     "pg": "^8.13.3"
   }
